--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/Bootstrap/1 (1).jpg" class="d-block w-100" alt="...">
+                <img src="One.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to iDev</h2>
                     <p>Technology News, Development and Trends</p>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Bootstrap/2 (1).jpg" class="d-block w-100" alt="...">
+                <img src="two.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Problem solving blog</h2>
                     <p>here we teach problem solving approach</p>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Bootstrap/3.jpg" class="d-block w-100" alt="...">
+                <img src="three.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Award winning Blog</h2>
                     <p>here we build award winning website</p>
